Fix alignment issue of .site-header .call-to-action at 576px
Issue didn't show up it Google dev tool. In Google chrome however
.call-to-action needs to be moved into the collapsible menu sooner
as it hits the .logo-container and is push down.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -316,7 +316,7 @@ input {
     }
 }
 
-@media screen and (max-width: 576px) {
+@media screen and (max-width: 580px) {
     .header-navbar li:last-child {
         display: block;
     }
